--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "'2017-08-23'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[2223 rows x 2 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "max       6.700000"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,22 +423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1d750d79a60>,\n",
-       " 'station': 'USC00519397',\n",
-       " 'latitude': 21.2716,\n",
-       " 'elevation': 3.0,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1d7568e1220>,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
        " 'longitude': -157.8168,\n",
        " 'id': 1,\n",
-       " 'name': 'WAIKIKI 717.2, HI US'}"
+       " 'latitude': 21.2716,\n",
+       " 'station': 'USC00519397',\n",
+       " 'elevation': 3.0}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,21 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1d75679fc10>,\n",
-       " 'tobs': 65.0,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1d7568f0b50>,\n",
+       " 'prcp': 0.08,\n",
        " 'id': 1,\n",
-       " 'date': '2010-01-01',\n",
        " 'station': 'USC00519397',\n",
-       " 'prcp': 0.08}"
+       " 'tobs': 65.0,\n",
+       " 'date': '2010-01-01'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[(9,)]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "[('USC00519281', 85.0, 54.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "[351 rows x 1 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
